# nimgm

./: .gitignore  README.md  bun.lockb  docker-compose.yml  dockerfile  index.html  nginx.conf  package-lock.json  package.json
assets/: manage_stock.mov  sales.mov
data/: db.sqlite
server/: Cargo.toml  db.sqlite  diesel.toml  dockerfile  schema.sql  start.sh
server/migrations/2024-06-16-151355_schema/: down.sql  up.sql
server/src/: main.rs  models.rs  schema.rs
src/: main.tsx
src/components/: Layout.tsx  autocomplete.tsx  main-nav.tsx
src/components/ui/: calendar.tsx
src/hooks/: useFetch.tsx  useLazyFetch.tsx
src/pages/: index.tsx
src/pages/deliveries/: Form.tsx  History.tsx  index.tsx
src/pages/sales/: index.tsx
src/pages/stock/: SheetComponent.tsx  colums.tsx  data-table.tsx  index.tsx
src/services/: routes.tsx
src/types/: global.d.ts
